# test_skytrack

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
data/: config.cfg
src/: paramcallback.cpp  paramcallback.h  utils.cpp  utils.h
